/*
 * Copyright 2019, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.model.verify;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.model.verify.given";
option java_outer_classname = "EditProto";
option java_multiple_files = true;

message EditState {

    option (entity).kind = AGGREGATE;

    string id = 1 [(required) = true];

    string editor = 2;
}

message RenameState {

    option (entity).kind = PROCESS_MANAGER;

    option (lifecycle).delete_upon = "PhotoDeleted";

    string id = 1 [(required) = true];

    string editor = 2;
}

message ArchiveState {

    option (entity).kind = PROCESS_MANAGER;

    option (lifecycle).archive_upon = "NonExistentType";

    string id = 1 [(required) = true];
}

message DeleteState {

    option (entity).kind = PROCESS_MANAGER;

    option (lifecycle).delete_upon = "ChangeTitle";

    string id = 1 [(required) = true];
}
